# enumerability

./: LICENSE  README.md  enumerability.cabal  enumerable.cabal
examples/: Peano.hs
src/Data/: Countable.hs  Enumerable.hs  Eumerable.hs
tests/: CountableTest.hs  EnumerableTest.hs
